Fixed text to align with gravel photograph

--- a/dsn1674-assignment-7/css/main.css
+++ b/dsn1674-assignment-7/css/main.css
@@ -69,11 +69,12 @@ img {
 p {
 	text-align: center;
 	margin: 0;	text-align: center;
-	position: relative;
+	position: absolute;
 	color: white;
 	bottom: 3em;
 	width: 100%;
 	font-size: 2rem;
+	margin-bottom: 5em;
 }
 
 .nest {
